--- a/LightFreeStroboscope/Base.lproj/Main.storyboard
+++ b/LightFreeStroboscope/Base.lproj/Main.storyboard
@@ -22,8 +22,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D89-FB-fvn">
-                                <rect key="frame" x="0.0" y="20" width="367" height="44"/>
+                            <navigationBar contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="D89-FB-fvn">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                </textAttributes>
                                 <items>
                                     <navigationItem title="How to use" id="TYC-dL-KVg">
                                         <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="ndd-Oh-p1F">
@@ -34,30 +37,80 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blah blah blah" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3gw-p8-3KB">
-                                <rect key="frame" x="32" y="-93" width="302" height="139"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hK3-5c-xfN">
+                                <rect key="frame" x="16" y="74" width="343" height="110"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="302" id="9g9-aE-CX2"/>
-                                    <constraint firstAttribute="height" constant="139" id="dxF-sb-IaY"/>
+                                    <constraint firstAttribute="height" constant="110" id="8gI-Da-Qd0"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="43"/>
-                                <nil key="textColor"/>
+                                <string key="text">This app functions as a visual stroboscope. It allows you to vary the frame rate of captured video in order to stop motion and determine the frequency of periodic actions - like the flashing of fluorescent lights or the spinning of a wheel. Frame rates between </string>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slide your finger up and down to vary the strobe speed." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XYp-gt-P6U">
+                                <rect key="frame" x="22" y="188" width="319" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="XKQ-CQ-iB7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe left to halve the strobe speed." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uEB-S6-HuN">
+                                <rect key="frame" x="22" y="271" width="319" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="odx-fn-dJj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe right to double the strobe speed." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yif-oe-mfU">
+                                <rect key="frame" x="22" y="237" width="319" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="J95-mj-MP4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap the hertz display to switch between Hz and RPM." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p7h-ya-ekv">
+                                <rect key="frame" x="22" y="305" width="319" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="4OU-ad-eqw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="p7h-ya-ekv" firstAttribute="top" secondItem="uEB-S6-HuN" secondAttribute="bottom" constant="4" id="22V-E0-Wp1"/>
+                            <constraint firstItem="XYp-gt-P6U" firstAttribute="top" secondItem="hK3-5c-xfN" secondAttribute="bottom" constant="4" id="3Yj-tU-aGC"/>
+                            <constraint firstItem="p7h-ya-ekv" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leadingMargin" constant="6" id="5ps-mA-lbO"/>
                             <constraint firstItem="D89-FB-fvn" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leading" id="Bk1-48-p0N"/>
-                            <constraint firstItem="3gw-p8-3KB" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leadingMargin" constant="16" id="W4e-gS-NAU"/>
+                            <constraint firstItem="hK3-5c-xfN" firstAttribute="trailing" secondItem="suv-xQ-gUw" secondAttribute="trailingMargin" id="Ju7-Qz-ker"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="D89-FB-fvn" secondAttribute="trailing" constant="-16" id="KUi-94-aGF"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="uEB-S6-HuN" secondAttribute="trailing" constant="18" id="N9y-1d-Cgu"/>
+                            <constraint firstItem="XYp-gt-P6U" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leadingMargin" constant="6" id="Sds-Tm-dBS"/>
                             <constraint firstItem="D89-FB-fvn" firstAttribute="top" secondItem="BAG-IF-stq" secondAttribute="bottom" id="Y54-gP-viL"/>
-                            <constraint firstItem="D89-FB-fvn" firstAttribute="centerX" secondItem="3gw-p8-3KB" secondAttribute="centerX" id="obQ-yy-mbU"/>
-                            <constraint firstItem="zMl-ap-8CC" firstAttribute="top" secondItem="3gw-p8-3KB" secondAttribute="bottom" constant="621" id="xUh-Kr-8CO"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="p7h-ya-ekv" secondAttribute="trailing" constant="18" id="ZmH-Qq-rlz"/>
+                            <constraint firstItem="uEB-S6-HuN" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leadingMargin" constant="6" id="eP4-Qm-HwJ"/>
+                            <constraint firstItem="yif-oe-mfU" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leadingMargin" constant="6" id="g5l-bK-ai6"/>
+                            <constraint firstItem="uEB-S6-HuN" firstAttribute="top" secondItem="yif-oe-mfU" secondAttribute="bottom" constant="4" id="hsf-5q-0ax"/>
+                            <constraint firstItem="hK3-5c-xfN" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leadingMargin" id="kcO-wp-HIZ"/>
+                            <constraint firstItem="hK3-5c-xfN" firstAttribute="top" secondItem="D89-FB-fvn" secondAttribute="bottom" constant="10" id="kwD-Vj-1Hr"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yif-oe-mfU" secondAttribute="trailing" constant="18" id="lPc-Dg-hq3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="XYp-gt-P6U" secondAttribute="trailing" constant="18" id="mMv-By-amn"/>
+                            <constraint firstItem="yif-oe-mfU" firstAttribute="top" secondItem="XYp-gt-P6U" secondAttribute="bottom" constant="4" id="qIK-tb-66y"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Dk-16-WpM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1194" y="-14"/>
+            <point key="canvasLocation" x="-1194.4000000000001" y="-14.842578710644679"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -78,8 +131,8 @@
                                     <segue destination="byb-dx-8ni" kind="presentation" id="cuV-tu-8vN"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K2c-Xv-gFL">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="92"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K2c-Xv-gFL">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.25" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="SwI-7n-Eva"/>
@@ -89,7 +142,7 @@
                                         <attributes>
                                             <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <font key="NSFont" size="36" name="AvenirNext-Regular"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="truncatingTail" baseWritingDirection="natural" paragraphSpacingBefore="20" tighteningFactorForTruncation="0.0"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="truncatingTail" baseWritingDirection="natural" lineHeightMultiple="1" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
                                 </attributedString>
@@ -99,8 +152,8 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="NTJ-7H-QYI" secondAttribute="bottom" constant="10" id="0Uj-u7-xo9"/>
                             <constraint firstItem="NTJ-7H-QYI" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" constant="-10" id="0ta-Cd-CgN"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="NTJ-7H-QYI" secondAttribute="bottom" constant="10" id="C5O-cB-LWn"/>
                             <constraint firstItem="K2c-Xv-gFL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Fxf-KZ-feW"/>
                             <constraint firstItem="K2c-Xv-gFL" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cZ9-vg-XMV"/>
                             <constraint firstAttribute="trailing" secondItem="K2c-Xv-gFL" secondAttribute="trailing" id="wDg-RF-CTi"/>
@@ -139,7 +192,7 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="56.799999999999997" y="40.029985007496258"/>
+            <point key="canvasLocation" x="56.5" y="39.5"/>
         </scene>
     </scenes>
 </document>
